[package]
name = "autobuild"
version = "0.1.2"
edition = "2021"
authors = ["w2moon <w2moon@gmail.com>"]
description = "A tool for automatic building and publishing based on git changes"
license = "MIT"
repository = "https://github.com/w2moon/autobuild"
readme = "README.md"
keywords = ["build", "automation", "git", "webhook"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
once_cell = "1.8"
